<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3E3E3"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/TituloApp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/DescripLogo"
                    app:srcCompat="@drawable/png_clipart_pc_master_race_computer_cases_housings_personal_computer_game_maize_miscellaneous_game" />

                <EditText
                    android:id="@+id/XeditCodigo"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/estilo_campo"
                    android:drawableStart="@drawable/ic_baseline_menu_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/StrCodigo"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="10dp"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    android:scrollbarAlwaysDrawVerticalTrack="false"
                    android:shadowColor="#DD2C00"
                    android:shadowDx="0"
                    android:shadowRadius="0"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#DFDEDE"
                    android:textColorHint="#DD2C00" />

                <EditText
                    android:id="@+id/XeditDescrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/estilo_campo"
                    android:drawableStart="@drawable/ic_baseline_description_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/StrDescrip"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#DD2C00"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/XeditArti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/estilo_campo"
                    android:drawableStart="@drawable/ic_baseline_attach_money_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/StrPrecio"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#DD2C00"
                    android:importantForAutofill="no" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">

                    <Button
                        android:id="@+id/XbtnGuardar"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#DD2C00"
                        android:text="@string/StrGuardar"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/XbtnBuscarCod"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#DD2C00"
                        android:text="@string/StrBuscarCode"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <Button
                    android:id="@+id/XbtnBuscarDescrip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="#DD2C00"
                    android:text="@string/StrConsuDesc"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="15dp"
                    android:paddingRight="5dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp">

                    <Button
                        android:id="@+id/XbtnBorrar"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="194dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#DD2C00"
                        android:text="@string/StrBorrar"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/XbtnEdir"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#DD2C00"
                        android:text="@string/StrEdit"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>