<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesArticulos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="705dp"
            app:cardBackgroundColor="#FFD7CD"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/txtResultBus"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:drawableStartCompat="@drawable/ic_baseline_search_24"
                    app:drawableTint="#000000" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:contentDescription="@string/DescripLogo"
                    app:srcCompat="@drawable/png_clipart_pc_master_race_computer_cases_housings_personal_computer_game_maize_miscellaneous_game" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/txtCodigo"
                            android:textColor="#000000"
                            app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24"
                            app:drawableTint="#DD2C00" />

                        <TextView
                            android:id="@+id/StrtxtCodLista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/StrVacio" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:drawablePadding="5dp"
                            android:padding="5sp"
                            android:text="@string/txtDescrip"
                            android:textColor="#000000"
                            app:drawableStartCompat="@drawable/ic_baseline_description_24"
                            app:drawableTint="#DD2C00" />

                        <TextView
                            android:id="@+id/StrtxtDesLista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/StrVacio" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/txtPrecio"
                            android:textColor="#000000"
                            app:drawableStartCompat="@drawable/ic_baseline_attach_money_24"
                            app:drawableTint="#DD2C00" />

                        <TextView
                            android:id="@+id/StrtxtPreciolista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/StrVacio" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                            android:drawablePadding="5dp"
                            android:padding="5dp"
                            android:text="@string/strFecha"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/StrFecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/StrVacio" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="143dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="#DD2C00"
                        android:text="@string/VerResultados" />

                    <Button
                        android:id="@+id/button2"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="#DD2C00"
                        android:text="@string/Editar" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>