<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConsultaSpiner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/StrOpcion"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:drawablePadding="5dp"
                    android:padding="5dp"
                    android:text="@string/txtCodigo"
                    android:textColor="#000000"
                    app:drawableTint="#DD2C00"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/ic_baseline_vpn_key_24" />

                <TextView
                    android:id="@+id/StrtxtCod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StrVacio" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="#FFFFFF"
                    android:padding="5sp"
                    android:text="@string/txtDescrip"
                    android:textColor="#000000"
                    app:drawableTint="#DD2C00"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/ic_baseline_description_24" />

                <TextView
                    android:id="@+id/StrtxtDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StrVacio" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:text="@string/txtPrecio"
                    android:textColor="#000000"
                    app:drawableTint="#DD2C00"
                    android:layout_marginEnd="10dp"
                    app:drawableStartCompat="@drawable/ic_baseline_attach_money_24" />

                <TextView
                    android:id="@+id/StrtxtPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StrVacio" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>